--- a/app/src/main/res/drawable/quantum_launchscreen_calendar.xml
+++ b/app/src/main/res/drawable/quantum_launchscreen_calendar.xml
@@ -4,17 +4,21 @@
     <item android:drawable="@android:color/white" />
     <item
         android:id="@+id/launchscreens_product_logo"
-        android:bottom="64.0dip">
+        android:height="1000dp"
+        android:width="300dp">
         <bitmap
             android:gravity="center"
-            android:src="@drawable/product_logo_calendar_color_144" />
+            android:src="@drawable/ic_tm"
+            />
+
     </item>
-    <item
+
+    <!--<item
         android:id="@+id/launchscreens_logo_text"
         android:bottom="104.0dip">
         <bitmap
             android:gravity="bottom|center"
             android:src="@drawable/googlelogo_dark20_color_132x44"
             android:tint="?android:textColorPrimary" />
-    </item>
+    </item>-->
 </layer-list>
