--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,6 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-
-
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
@@ -75,6 +73,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:orientation="horizontal"
@@ -83,6 +82,7 @@
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:layout_height="wrap_content">
+
                             <TextView
                                 android:id="@+id/monthname"
                                 android:layout_width="wrap_content"
@@ -91,6 +91,7 @@
                                 android:text="June"
                                 android:textColor="#464646"
                                 android:textSize="20sp" />
+
                             <ImageView
                                 android:id="@+id/arrowImageView"
                                 android:layout_width="wrap_content"
@@ -147,44 +148,40 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >
+
                 <com.example.GoogleCalendar.weekview.WeekView
                     android:id="@+id/weekView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:eventTextColor="@android:color/white"
-                    app:textSize="12sp"
-                    app:eventTextSize="12sp"
-
-                    app:allDayEventHeight="20dp"
-                    app:hourHeight="30dp"
-                    app:showNowLine="true"
-                    app:nowLineColor="#000"
-                    app:eventCornerRadius="3dp"
                     android:background="@android:color/white"
+                    app:allDayEventHeight="20dp"
+                    app:columnGap="0dp"
+
+                    app:dayBackgroundColor="@android:color/white"
+                    app:eventCornerRadius="3dp"
+                    app:eventTextColor="@android:color/white"
+                    app:eventTextSize="12sp"
+                    app:headerColumnBackground="#000"
                     app:headerColumnPadding="16dp"
                     app:headerColumnTextColor="#606368"
-                    app:headerRowPadding="9dp"
-                    app:columnGap="0dp"
-                    app:noOfVisibleDays="3"
                     app:headerRowBackgroundColor="@android:color/white"
-                    app:hourSeparatorHeight="1.3dp"
+                    app:headerRowPadding="9dp"
+                    app:hourHeight="30dp"
                     app:hourSeparatorColor="#EDEDED"
-                    app:dayBackgroundColor="@android:color/white"
-                    app:todayBackgroundColor="#ff1a73e8"
-                    app:headerColumnBackground="#000"
+                    app:hourSeparatorHeight="1.3dp"
+                    app:noOfVisibleDays="3"
+                    app:nowLineColor="#000"
                     app:overlappingEventGap="2dp"
-                    app:todayHeaderTextColor="#ff1a73e8"
+                    app:showNowLine="true"
+                    app:textSize="12sp"
+                    app:todayBackgroundColor="#ff1a73e8"
+                    app:todayHeaderTextColor="#ff1a73e8" />
 
-
-                    />
                 <View
                     android:id="@+id/myshadow"
-                    android:layout_height="4dp"
                     android:layout_width="match_parent"
-                    android:background="@drawable/myrect"
-                    />
-
-
+                    android:layout_height="4dp"
+                    android:background="@drawable/myrect" />
             </RelativeLayout>
 
         </ScrollView>
@@ -196,101 +193,82 @@
             android:clickable="true"
             android:focusable="true"
             android:translationZ="@dimen/tendp"
-            android:background="@android:color/white"
-            >
-
-            <ImageButton
-                android:id="@+id/closebtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:visibility="gone"
-                android:layout_marginTop="45dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_close_black_24dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:id="@+id/roundrect"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:background="@drawable/rround"
-                app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                app:layout_constraintTop_toTopOf="@+id/textView12"
-                app:layout_constraintEnd_toEndOf="@+id/closebtn"
-                app:layout_constraintStart_toStartOf="@+id/closebtn"
-                />
+            android:background="@android:color/white">
 
             <TextView
                 android:id="@+id/textView12"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:paddingLeft="64dp"
+                android:layout_marginTop="56dp"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="@font/googlesans_regular"
+                android:visibility="gone"
+                android:paddingLeft="16dp"
                 android:text="Bhai Duj"
                 android:textColor="#000"
-                android:paddingRight="24dp"
                 android:textSize="23sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/closebtn"  />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView13"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:visibility="gone"
                 android:fontFamily="@font/googlesans_regular"
-                android:paddingRight="8dp"
-                android:text=""
+                android:paddingLeft="16dp"
+                android:paddingRight="4dp"
+                android:text="Test"
                 android:textColor="#000"
                 android:textSize="16sp"
-                android:paddingLeft="64dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView12"/>
+
+            <ProgressBar
+                android:id="@+id/task_progressbar_call_app"
+                android:layout_marginTop="74dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginEnd="16dp"
+                android:indeterminateOnly="false"
+                android:progressDrawable="@drawable/progress_ring"
+                app:layout_constraintBottom_toTopOf="@id/principal_spinner"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:src="@drawable/calendar_badged_icon"
-                app:layout_constraintEnd_toEndOf="@+id/closebtn"
-                app:layout_constraintStart_toStartOf="@+id/closebtn"
-                app:layout_constraintTop_toBottomOf="@+id/textView13" />
-
-            <TextView
-                android:id="@+id/textView014"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/googlesans_regular"
-                android:paddingLeft="64dp"
-                android:text="Events"
-                android:textColor="#000"
-                android:textSize="15.5sp"
-                android:layout_marginTop="24dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView13"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"
                 />
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/progress_tv1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/googlesans_regular"
-                android:paddingLeft="64dp"
-                android:text="Holidays in India"
-                android:textColor="#787878"
-                android:textSize="13.6sp"
-                android:layout_marginTop="4dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView014"
-                />
+                android:textColor="@android:color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/task_progressbar_call_app"
+                app:layout_constraintEnd_toEndOf="@+id/task_progressbar_call_app"
+                app:layout_constraintStart_toStartOf="@+id/task_progressbar_call_app"
+                app:layout_constraintTop_toTopOf="@+id/task_progressbar_call_app"
+                android:text="4/10"/>
+
+            <Spinner
+                android:id="@+id/principal_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView13"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/taskRecyclerView"
+                android:layout_width="match_parent"
+                android:paddingBottom="220dp"
+                android:overScrollMode="never"
+                android:visibility="gone"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/principal_spinner"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -306,9 +284,6 @@
         app:headerLayout="@layout/drawerheader"
         app:menu="@menu/nav_item"
         >
-
-
-
 
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
