--- a/app/src/main/res/layout/drawerheader.xml
+++ b/app/src/main/res/layout/drawerheader.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/ic_schedule"
+        android:src="@drawable/ic_tm"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView15"
         app:layout_constraintEnd_toStartOf="@+id/textView15"
@@ -24,14 +24,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/googlesansmed"
-        android:text="JCalendar"
+        android:text="Task Manager"
         android:textColor="#1A73E8"
         android:textSize="20sp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
