--- a/app/src/main/res/layout/view_item.xml
+++ b/app/src/main/res/layout/view_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView xmlns:tools="http://schemas.android.com/tools"
+    <TextView
         android:id="@+id/view_item_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         android:fontFamily="@font/googlesansmed"
         android:orientation="horizontal"
         android:padding="9dp"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,19 +26,40 @@
         tools:context=".MainActivity"
         tools:text="Aardvark" />
 
-    <View
+    <ProgressBar
+        android:id="@+id/task_progressbar_schedule"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="16dp"
+        android:indeterminateOnly="false"
+        android:progressDrawable="@drawable/progress_ring_schedule"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view_item_textview"
+        android:progress="50"/>
+
+    <TextView
+        android:id="@+id/progress_tv2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/task_progressbar_schedule"
+        app:layout_constraintEnd_toEndOf="@+id/task_progressbar_schedule"
+        app:layout_constraintStart_toStartOf="@+id/task_progressbar_schedule"
+        app:layout_constraintTop_toTopOf="@+id/task_progressbar_schedule"
+        android:text="4/10"/>
+
+    <!--<View
         android:id="@+id/circle"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/blackcircle"
-
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_item_textview"
-
-        />
+        app:layout_constraintTop_toBottomOf="@+id/view_item_textview" />
 
     <View
         android:id="@+id/line"
@@ -53,7 +74,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/circle"
 
-        />
+        />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
